# pond-ros-visao

./: .gitignore  README.md  pipeline_turtlesim.ipynb  pipeline_visao.ipynb
results/: turtlesim_waypoints.json  visao_component_mask.npy  visao_contours_tracing.npz  visao_edges_refined.npy  visao_edges_thresh39.npy
ros2_package/src/turtle_contour_follower/: package.xml  setup.cfg  setup.py
ros2_package/src/turtle_contour_follower/launch/: follow_waypoints.launch.py
ros2_package/src/turtle_contour_follower/turtle_contour_follower/: follow_waypoints_node.py
