<?xml version="1.0"?>
<package format="3">
  <name>turtle_contour_follower</name>
  <version>0.0.1</version>
  <description>Follow contour waypoints in turtlesim.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
